--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,6 @@
 	<p>Welcome to chat app</p>
 	<!-- Loading in the io script-->
 	<script src="/socket.io/socket.io.js"></script> 
-	<script>
-		var socket = io();
-
-		// connect event of client side is same as connection event of server.js
-		socket.on('connect', () => {
-			console.log('connected to server');
-		});
-
-		socket.on('disconnect', () => {
-			console.log('Disconnected from server');
-		});
-	</script>
+	<script src="/js/index.js"></script>
 </body>
 </html>
