--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,29 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="/css/styles.css">
 	<title>Chat app</title>
 </head>
-<body>
-	<p>Welcome to chat app</p>
-	
-	<ol id="messages"></ol>
+<body class="chat">
+	<div class="chat__sidebar">
+		<h3>People</h3>
+		<div id="users"></div>
+	</div>
 
-	<form action="" id="message-form">
-		<input name="message" type="text" placeholder="Message" autofocus />
-		<button>Send</button>
-	</form>
-	<button id="send-location">Send Location</button>
+	<div class="chat__main">
+		<ol id="messages" class="chat__messages"></ol>
+
+		<div class="chat__footer">
+			<form id="message-form">
+				<input name="message" type="text" placeholder="Message" autofocus autocomplete="off" />
+				<button id="send">Send</button>
+				</form>
+			<button id="send-location">Send location</button>	
+		</div>
+	</div>
+	
+
+	
 	<!-- Loading in the io script-->
 	<script src="/socket.io/socket.io.js"></script> 
 	<script src="/js/libs/jquery-3.2.1.min.js"></script>
